# Reimagine-movies

./: README.md  example_websearch.py  main.py  pyproject.toml
Demo/: Demo1-KGF_Chapter1-VedicEra_English.mov
data/: knowledge_base.yaml  source_stories.yaml
docs/: EXAMPLE_TRANSFORMATION.md  FILE_LISTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  SOLUTION.md  SYSTEM_DIAGRAM.md  architecture.mermaid
output/: ramayana_shaktimaan.md  reimagined_777_charlie.md  reimagined_alien_vs._predator.md  reimagined_anna_bond_kannada_web.md  reimagined_dhurandhar_gpt.md  reimagined_dhurandhar_web.md  reimagined_kgf_chapter_1_web.md  reimagined_mad_max:_fury_road.md  reimagined_raju_kannada_medium.md  reimagined_sholay.md
src/: api.py  orchestrator.py  web_search.py
src/agents/: base.py  character_mapping_agent.py  plot_transformation_agent.py  qa_agent.py  story_analysis_agent.py  story_writer_agent.py  world_builder_agent.py
src/models/: __init__.py  domain.py
